--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-{% if page.slug == "product" %}{% include product-nav.html %}{% endif %}
-{% if page.slug == "company" %}{% include company-nav.html %}{% endif %}
-{% if page.slug == "support" %}{% include support-nav.html %}{% endif %}
+{% if page.slug == "product" %}{% include product-nav.html %}
+{% elsif page.slug == "company" %}{% include company-nav.html %}
+{% elsif page.slug == "support" %}{% include support-nav.html %}
+{% endif %}
 <div class="container main-content">
   <div class="row">
     <div class="col-md-7 center-block">
