--- a/_layouts/awards.html
+++ b/_layouts/awards.html
@@ -7,7 +7,7 @@ layout: page
 <div class="row gallery">
   {% for post in site.categories.award %}
   <div class="col-sm-4 col-xs-6">
-    <a href="{{ post.url }}"><img src="/img/{{ post.image }}"></a>
+    <a href="{{ post.url }}"><img src="{{ site.baseurl }}/img/{{ post.image }}"></a>
   </div>
   {% endfor %}
 </div>
