--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,6 @@ slug: company
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date: "%B %-d, %Y" }}</p>
 
-<img src="/img/{{page.image }}">
+<img src="{{ site.baseurl }}/img/{{page.image }}">
 
 {{ content }}
